--- a/style.css
+++ b/style.css
@@ -1,3 +1,55 @@
-p {color:blue; font-size:12px;}
+
+h1 {
+  color: azure;
+  font-family: "Papyrus", sans-serif;
+  font-size: 50px;
+  
+  
+}
+p {
+  color: azure;
+  font-family: "Apple Chancery", sans-serif;
+  font-size: 20px;
+  letter-spacing: 2px;
+}
+
+body {
+  background-image:
+    url("http://wallpaperbeta.com/wallpaper_3840x2160/dark_forest_leaves_tree_trunks_nature_ultra_3840x2160_hd-wallpaper-36809.jpg");
+  background-repeat: no-repeat;
+
+}
+
+p.double {
+  border-style: double;
+  border-color: aqua;
+}
+
+a {
+  color: azure;
+  font-family: "Apple Chancery", sans-serif;
+  letter-spacing: 2px;
+  font-size: 15 px;
+ 
+  /* unvisited link */
+  a:link { "http://wallpaperbeta.com/wallpaper_3840x2160/dark_forest_leaves_tree_trunks_nature_ultra_3840x2160_hd-wallpaper-36809.jpg";
+    color: azure;
+  }
+
+  /* visited link */
+  a:visited {
+    color: blanchedalmond;
+  }
+
+  /* mouse over link */
+  a:hover {
+    color: skyblue;
+  }
+
+  /* selected link */
+  a:active {
+    color: skyblue;
+  }
+
 
  
