--- a/style.css
+++ b/style.css
@@ -51,5 +51,30 @@ a {
     color: skyblue;
   }
 
+.nav > div {
+ background: #00CCCC;
+ float: left;
+ padding: 10px;
+ border: 4px solid #660033;
+ border-radius: 4px;
+}
+
+.nav > div:hover {
+  background:#99FFFF;
+  height 120%;
+}
+
+body {
+  width: 800 px;
+  text-align: center;
+  margin: 0 auto;
+}
+
+.nav {
+  margin: aut;
+  text-align: center; 
+}
+
+
 
  
