--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ body {
 }
 
 a:link, a:visited {
-    background-color: #f44336;
+    background-color: #00FF66;
     color: white;
     padding: 14px 25px;
     text-align: center; 
@@ -84,5 +84,5 @@ a:link, a:visited {
 }
 
 a:hover, a:active {
-    background-color: red;
+    background-color: blue;
 }
