--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ p {
 body {
   background-image:
     url("http://41.media.tumblr.com/5e281922d545b0efa23aca1507e4dc5e/tumblr_nhu8n9ZOIi1rbl5n4o1_1280.jpg");
-  background-repeat: repeat-y;
+  background-repeat: repeat;
 
 }
 
