--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ a {
 
 .nav > div {
  background: #00CCCC;
- float: left;
+ float: right;
  padding: 10px;
  border: 4px solid #660033;
  border-radius: 4px;
