--- a/style.css
+++ b/style.css
@@ -58,6 +58,7 @@ p.double {
  padding: 10px;
  border: 4px solid #660033;
  border-radius: 4px;
+ display: inline-block; 
 }
 
 .navbar_horizontal > div:hover {
@@ -72,7 +73,7 @@ body {
 }
 
 .navbar_horizontal {
-  margin: aut;
+  margin: auto;
   text-align: center; 
 }
 
