--- a/style.css
+++ b/style.css
@@ -52,13 +52,14 @@ p.double {
     color: blanchedalmond;
   }
 
-.navbar_horizontal > div {
+.navbar_horizontal > a {
  background: #00CCCC;
  float: right;
  padding: 10px;
  border: 4px solid #660033;
  border-radius: 4px;
  display: inline-block; 
+ text decoration: none;
 }
 
 .navbar_horizontal > div:hover {
@@ -76,6 +77,7 @@ body {
   margin: auto;
   text-align: center; 
 }
+
 
 
 }
