--- a/style.css
+++ b/style.css
@@ -86,3 +86,14 @@ ul {
 
 }
 
+li {
+    display: inline;
+    float: left;
+}
+
+a {
+    display: block;
+    padding: 8px;
+    background-color: #dddddd;
+}
+
