--- a/style.css
+++ b/style.css
@@ -27,10 +27,12 @@ p.double {
 }
 
 .nav > div {
-  color: azure;
-  font-family: "Apple Chancery", sans-serif;
-  letter-spacing: 2px;
-  font-size: 15 px;
+    background: #00CCCC;
+    float: left;
+    padding: 10px;
+    border: 4px solid #660033;
+    border-radius: 4px;
+}
  
   /* unvisited link */
   .nav > a:link { "http://wallpaperbeta.com/wallpaper_3840x2160/dark_forest_leaves_tree_trunks_nature_ultra_3840x2160_hd-wallpaper-36809.jpg";
