--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body {
  background: #00CCCC;
  float: left;
  padding: 10px;
- border: 4px solid #660033;
+ border: 2px solid #660033;
  border-radius: 4px;
  display: inline-block; 
  text-decoration: none;
@@ -61,6 +61,11 @@ body {
 .nav > div:hover {
   background:#99FFFF;
   height 120%;
+   text-align: center;
+}
+.nav > div:visited {
+  background: ##E8E8E8;
+     text-align: center;
 }
 
 body {
